--- a/k8s/kafka/zk.yaml
+++ b/k8s/kafka/zk.yaml
@@ -1,7 +1,28 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: kafka-2
+
+---
+# Zookeeper Service
+# zookeeper.yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: zookeeper
+  namespace: kafka-2
+spec:
+  ports:
+    - port: 2181
+      name: client
+  selector:
+    app: zookeeper
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: zookeeper
+  namespace: kafka-2
 spec:
   serviceName: "zookeeper"
   replicas: 1
@@ -16,26 +37,14 @@ spec:
       containers:
         - name: zookeeper
           image: bitnami/zookeeper:3.8.1
-          resources:
-            requests:
-              memory: "256Mi"
-              cpu: "100m"
-            limits:
-              memory: "512Mi"
-              cpu: "200m"
           ports:
             - containerPort: 2181
           env:
             - name: ALLOW_ANONYMOUS_LOGIN
               value: "yes"
           volumeMounts:
-            - name: data
+            - name: zookeeper-data
               mountPath: /bitnami/zookeeper
-  volumeClaimTemplates:
-    - metadata:
-        name: data
-      spec:
-        accessModes: ["ReadWriteOnce"]
-        resources:
-          requests:
-            storage: 500Mi
+      volumes:
+        - name: zookeeper-data
+          emptyDir: {}
