chore: update namespace name to kafka

--- a/k8s/kafka/zk.yaml
+++ b/k8s/kafka/zk.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: kafka-2
+  name: kafka
 
 ---
 # Zookeeper Service
@@ -10,7 +10,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: zookeeper
-  namespace: kafka-2
+  namespace: kafka
 spec:
   ports:
     - port: 2181
@@ -22,7 +22,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: zookeeper
-  namespace: kafka-2
+  namespace: kafka
 spec:
   serviceName: "zookeeper"
   replicas: 1
