--- a/k8s/kafka/k-ui.yaml
+++ b/k8s/kafka/k-ui.yaml
@@ -1,11 +1,16 @@
-
+---
+# Kafka Namespace
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: kafka
 ---
 # Kafka UI Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kafka-ui
-  namespace: kafka-2
+  namespace: kafka
 spec:
   replicas: 1
   selector:
@@ -34,7 +39,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kafka-ui
-  namespace: kafka-2
+  namespace: kafka
 spec:
   ports:
     - port: 8080
