--- a/k8s/kafka/kafka-main.yaml
+++ b/k8s/kafka/kafka-main.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: kafka
-  namespace: kafka-2
+  namespace: kafka
 spec:
   serviceName: kafka
   replicas: 1
@@ -58,7 +58,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kafka
-  namespace: kafka-2
+  namespace: kafka
 spec:
   type: NodePort
   ports:
