fix: kafke work locally

--- a/k8s/kafka/kafka-main.yaml
+++ b/k8s/kafka/kafka-main.yaml
@@ -32,7 +32,7 @@ spec:
             - name: KAFKA_CFG_LISTENERS
               value: "INTERNAL://0.0.0.0:9092,EXTERNAL://0.0.0.0:30092"
             - name: KAFKA_CFG_ADVERTISED_LISTENERS
-              value: "INTERNAL://kafka.kafka-2.svc.cluster.local:9092,EXTERNAL://localhost:30092"
+              value: "INTERNAL://kafka.kafka.svc.cluster.local:9092,EXTERNAL://localhost:30092"
             - name: KAFKA_CFG_INTER_BROKER_LISTENER_NAME
               value: "INTERNAL"
             # Replication configuration
